2009-12-02  Thomas M. Hinkle  <tom@grenville>

	* src/lib/importers/importManager.py (ImportManager.finish_web_import):
	Print information about importer being used.


2009-12-01  Thomas M. Hinkle  <tom@grenville>

	* src/lib/GourmetRecipeManager.py (RecGui.setup_main_window): Add
	right-click menu back to main interface (we use the contents of
	the action menu for the right-click).

	* src/lib/reccard.py (RecCardDisplay.update_yields_multiplier):
	Fix updating of yield_unit on yield_change.

2009-11-29  Thomas M Hinkle  <tom@minime>

	* src/lib/prefsGui.py (PreferencesGui): Make PreferencesGui
	pluggable.

	* src/lib/plugins/nutritional_information/__init__.py: ++
	preferences plugin

	* src/lib/plugins/nutritional_information/export_plugin.py (NutritionBaseExporterPlugin):
	Add preference that allows user to turn off nutritional export
	altogether or to turn it off when information is only partial.

	* src/lib/plugin.py (BaseExporterPlugin.add_field): Add parameter
	write_empty_field (which defaults to False) to determine whether
	we add custom fields with no content.
	(DatabasePlugin.remove): Change "deactivate" call to "remove",
	which was what was intended (deactivate is called when the
	pluggable is destroyed; remove is called when the plugin is
	deactivated).
	(PrefsPlugin): Add base class for adding tabs to preferences
	dialog.

	* src/lib/plugin_loader.py (MasterLoader.register_pluggable): Fix
	typo.

	* glade/preferenceDialog.glade: Remove hardcoded email
	preferences (if we want them back, they belong in the email
	plugin).
	
2009-11-22  Thomas M. Hinkle  <tom@grenville>

	* src/lib/plugins/import_export/pdf_plugin/pdf_exporter.py (CustomUnitOption):
	Add custom widget for setting margins that allows adjusting of
	units (cm/inch/points).
	(PdfPrefGetter.get_args_from_opts): Save page layout preferences
	correctly.

	* src/lib/gtk_extras/optionTable.py (OptionTable.createOptionWidgets):
	Add CustomOption option for callers who want to provide their own